namespace Terriflux.Programs.Model.Cell
{
    /// <summary>
    /// Scale of influence of a structur.
    /// </summary>
    public enum InfluenceScale
    {
        REGIONAL,
        NATIONAL,
        WORLDWIDE
    }
}