namespace Terriflux.Programs.Model
{
    public enum CellKind
    {
        BUILDING,
        WASTELAND, // free cell 
        PRIMARY // nothing, basic 
    }
}
