namespace Terriflux.Programs.Model
{
    /// <summary>
    /// Summary description for Class1
    /// </summary>
    public enum Direction2D
    {
        HORIZONTAL,
        VERTICAL
    }
}