namespace Terriflux.Programs.Model.Placeables
{
    public enum FlowKind
    {
        // ex: for a car factory
        Electricity,
        Raw_materials,
        // ex: for fields
        Water,
        Cereals,
        // ex : for an company
        Merchandise_manufactured,
        // ex : swamill
        Wood,
        Wooden_plank
    }
}