using Terriflux.Programs.Model;

namespace Terriflux.Programs.Observers
{
    public interface IGridObserver
    {
        public void UpdateMap(GridModel grid);
    }
}